add: a few things

--- a/_posts/2018-7-11-example.md
+++ b/_posts/2018-7-11-example.md
@@ -1,10 +1,15 @@
 ---
 layout: post
-title: Example Post
+title: テスト
 ---
 
-![sample post]({{site.baseurl}}/images/image-2.png){: .img-rounded}
+<!-- ![sample post]({{site.baseurl}}/dist/images/image-2.png){: .img-rounded} -->
+<iframe width="560" height="315" src="https://www.youtube.com/embed/pJJnzNGUzfM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
+
+<h1>フリスビーをする</h1>
+<p>Australian University Gamesというオーストラリア全国の大学が集まり各スポーツ種目をトーナメント形式で競い合う、5日間のお祭り。</p>
+<p>日中は試合をして、夜は遊び呆ける。宿に帰ってその日の試合の反省や称賛を共有し、街に繰り出し飲んで踊って遊ぶ。<br>翌日また朝から試合に臨む。それを繰り返す濃度の高い5日間。</p>
 
 # Header 1
 
@@ -22,7 +27,7 @@ title: Example Post
 
 ## Paragraphs
 
-These are sample paragraphs showing *italics*, **bold** and ``code`` text style. Here is an unordered  list 
+These are sample paragraphs showing *italics*, **bold** and ``code`` text style. Here is an unordered  list
 
 * Item 1
 * Item 2
@@ -36,7 +41,7 @@ and an ordered list
 
 >A blockquote would look like this.
 
-> another one 
+> another one
 >
 > with multiple lines
 
@@ -74,6 +79,6 @@ This is a simple markdown table
 Use below code to show **Table of Contents** on a page
 
 {% highlight css %}
-* Do not remove this line (it will not be displayed) 
+* Do not remove this line (it will not be displayed)
 {:toc}
 {% endhighlight %}
