--- a/_posts/2018-7-11-example.md
+++ b/_posts/2018-7-11-example.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: テスト
+excerpt: オーストラリア留学でフリスビーをやったら楽しかったよ
+keywords: 留学、オーストラリア、フリスビー、Australian University Games
 ---
 
 <!-- ![sample post]({{site.baseurl}}/dist/images/image-2.png){: .img-rounded} -->
