--- a/_posts/2018-7-11-example.md
+++ b/_posts/2018-7-11-example.md
@@ -6,6 +6,8 @@ keywords: 留学、オーストラリア、フリスビー、Australian Universi
 
 ---
 
+<img src="multipotnomad.github.io/_posts/1canmore.JPG">
+
 <!-- ![sample post]({{site.baseurl}}/dist/images/image-2.png){: .img-rounded} -->
 <iframe width="560" height="315" src="https://www.youtube.com/embed/pJJnzNGUzfM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
